Fixed issue Sidebar overlapping header #794

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -4,7 +4,7 @@
   background-color: white;
 }
 .sidebar.scrolling {
-  position: fixed;
+  position: sticky;
   top: 90px;
 }
 .sidebar a {
